# ApplicationTracker

./: CMakeLists.txt  README.md  database.cpp  database.h  functions.cpp  functions.h  heatmap.cpp  heatmap.h  main.cpp  pie_chart.cpp  pie_chart.h  tracker.cpp  tracker.h
imgui/backends/: imgui_impl_win32.cpp
